examples/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  labels:
    app: backend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: mycontainerregistry.azurecr.io/backend:VERSION-REPLACED-BY-KUSTOMIZE
          ports:
            - containerPort: 8080
